# baudmine

./: .gitignore  CMakeLists.txt  CMakeLists_wasm.cmake  README.md  build_wasm.sh
.github/workflows/: build.yml
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioSource.h  FileSource.cpp  FileSource.h  MiniAudioSource.cpp  MiniAudioSource.h  PortAudioSource.cpp  PortAudioSource.h  WavReader.cpp  WavReader.h  miniaudio.h
src/core/: Config.cpp  Config.h  RingBuffer.h  Types.h
src/dsp/: FFTProcessor.cpp  FFTProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  WindowFunctions.cpp  WindowFunctions.h
src/ui/: Application.cpp  Application.h  ColorMap.cpp  ColorMap.h  ControlPanel.cpp  ControlPanel.h  Cursors.cpp  Cursors.h  DisplayPanel.cpp  DisplayPanel.h  Measurements.cpp  Measurements.h  SpectrumDisplay.cpp  SpectrumDisplay.h  UIState.h  WaterfallDisplay.cpp  WaterfallDisplay.h
web/: shell.html
